tests/ui/feature-gates/gated-bad-feature.stderr
error[E0556]: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:2:25
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |                         ^^^^^^^^ help: expected just one word: `foo`

error[E0556]: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:2:35
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |                                   ^^^^^^^^^^^ help: expected just one word: `foo`

error[E0557]: feature has been removed
  --> $DIR/gated-bad-feature.rs:9:12
   |
LL | #![feature(test_removed_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^ feature has been removed
   |
   = note: removed in 1.0.0 (you are using $RUSTC_VERSION)

error: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:7:1
   |
LL | #![feature]
   | ^^^^^^^^^^^ help: must be of the form: `#![feature(name1, name2, ...)]`

error: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:8:1
   |
LL | #![feature = "foo"]
   | ^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#![feature(name1, name2, ...)]`

error[E0635]: unknown feature `foo_bar_baz`
  --> $DIR/gated-bad-feature.rs:2:12
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |            ^^^^^^^^^^^

error[E0635]: unknown feature `foo`
  --> $DIR/gated-bad-feature.rs:2:48
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |                                                ^^^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0556, E0557, E0635.
For more information about an error, try `rustc --explain E0556`.
